k8s/frontend/chat-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app
spec:
  selector:
    app: chat-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
