k8s/frontend/chat-app-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chat-app-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: chat-app
        port:
          number: 80
